<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.irisf.notas.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sesenta"
            android:textSize="30dp"
            android:id="@+id/practicas"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/avance1"
            android:textSize="30dp"
            android:id="@+id/avance1"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/avance2"
            android:textSize="30dp"
            android:id="@+id/avance2"
            android:inputType="numberDecimal"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/avance3"
            android:textSize="30dp"
            android:id="@+id/avance3"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/appfinal"
            android:textSize="30dp"
            android:id="@+id/appfinal"
            android:inputType="numberDecimal"/>

    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/calcular"
           android:id="@+id/calcular"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="50dp"
           android:hint="@string/resultado"
           android:gravity="center"
           android:id="@+id/resultado"/>

   </LinearLayout>



</LinearLayout>
